k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wakeonlan-webapp
  namespace: wakeonlan-webapp
spec:
  selector:
    app: wakeonlan-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
